tests/ui/or_3.stderr
error: cannot find attribute `tokio_select` in this scope
 --> tests/ui/or_3.rs:6:7
  |
6 |     #[tokio_select(biased)]
  |       ^^^^^^^^^^^^
  |
note: `tokio_select` is imported here, but it is a function-like macro
 --> tests/ui/or_3.rs:3:5
  |
3 | use better_tokio_select::tokio_select;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find macro `on` in this scope
 --> tests/ui/or_3.rs:8:17
  |
8 |         _ | _ | on!(invalid) => invalid,
  |                 ^^

error[E0425]: cannot find value `invalid` in this scope
 --> tests/ui/or_3.rs:8:33
  |
8 |         _ | _ | on!(invalid) => invalid,
  |                                 ^^^^^^^ not found in this scope
